.metadata/.plugins/org.eclipse.cdt.ui/ConwayLifeGame.build.log
01:15:09 **** Incremental Build of configuration Debug for project ConwayLifeGame ****
make all 
Building file: ../JuegoDeLaVida.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"JuegoDeLaVida.d" -MT"JuegoDeLaVida.d" -o "JuegoDeLaVida.o" "../JuegoDeLaVida.cpp"
../JuegoDeLaVida.cpp:4:11: error: ‘::main’ must return ‘int’
 void main(){
           ^
make: *** [JuegoDeLaVida.o] Error 1
subdir.mk:18: fallo en las instrucciones para el objetivo 'JuegoDeLaVida.o'

01:15:10 Build Finished (took 173ms)

